--- a/src/layout/index.module.less
+++ b/src/layout/index.module.less
@@ -10,6 +10,7 @@
   border-bottom: 1px solid #eee;
   box-sizing: border-box;
   overflow: hidden;
+  border-bottom: 1px solid #eee;
 }
 
 .headerCloseMenu {
@@ -25,7 +26,7 @@
   top: 0;
   bottom: 0;
   background-color: #000;
-  width: @layout_left;
+  width: @layout_left !important;
 }
 
 .menuClose {
@@ -68,4 +69,8 @@
 
 .headerPhone {
   left: 0 !important;
+}
+
+.leftDivide {
+  border-left: 1px solid #d9d9d9;
 }
