--- a/src/assets/css/default.less
+++ b/src/assets/css/default.less
@@ -1,4 +1,4 @@
-@layout_top: 4.8rem;
-@layout_left: 15rem;
-@layout_left_close: 5rem;
+@layoutTop: 4.8rem;
+@layoutLeft: 15rem;
+@layoutLeftClose: 5rem;
 @bg: #F6F9F8;
