--- a/src/layouts/index.module.less
+++ b/src/layouts/index.module.less
@@ -4,9 +4,9 @@
   position: fixed;
   flex-direction: column;
   top: 0;
-  left: @layout_left;
+  left: @layoutLeft;
   right: 0;
-  height: @layout_top;
+  height: @layoutTop;
   border-bottom: 1px solid #eee;
   box-sizing: border-box;
   overflow: hidden;
@@ -14,7 +14,7 @@
 }
 
 .headerCloseMenu {
-  left: @layout_left_close !important;
+  left: @layoutLeftClose !important;
 }
 
 .headerDriver {
@@ -26,33 +26,33 @@
   top: 0;
   bottom: 0;
   background-color: #000;
-  width: @layout_left !important;
+  width: @layoutLeft !important;
 }
 
 .menuClose {
-  width: @layout_left_close !important;
+  width: @layoutLeftClose !important;
 }
 
 .con {
   position: fixed;
-  left: @layout_left;
-  top: @layout_top;
+  left: @layoutLeft;
+  top: @layoutTop;
   right: 0;
   bottom: 0;
 }
 
 .conCloseMenu {
-  left: @layout_left_close;
+  left: @layoutLeftClose;
 }
 
 .conMaximize {
   left: 0 !important;
-  top: calc(@layout_top / 2);
+  top: calc(@layoutTop / 2);
 }
 
 .headerNone {
   left: 0 !important;
-  height: calc(@layout_top / 2)
+  height: calc(@layoutTop / 2)
 }
 
 .none {
