--- a/src/assets/css/antd.less
+++ b/src/assets/css/antd.less
@@ -1,3 +1,24 @@
 .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab, .ant-tabs-card > div > .ant-tabs-nav .ant-tabs-tab {
   padding: 5px 16px 8px !important;
 }
+
+.full-modal {
+  .ant-modal {
+    position: absolute;
+    max-width: 100%;
+    top: 0 !important;
+    bottom: 0 !important;
+    left: 0 !important;
+    right: 0 !important;
+    padding-bottom: 0;
+    margin: 0;
+  }
+  .ant-modal-content {
+    display: flex;
+    flex-direction: column;
+    height: calc(100vh);
+  }
+  .ant-modal-body {
+    flex: 1;
+  }
+}
