--- a/src/assets/css/antd.less
+++ b/src/assets/css/antd.less
@@ -44,3 +44,9 @@
     background-color: #fcfcfc;
   }
 }
+
+.bordered {
+  .ant-table-tbody > tr > td {
+    border-right: 1px solid #f0f0f0;
+  }
+}
