fix: 修复多层菜单刷新展开

--- a/src/assets/css/scrollbar.less
+++ b/src/assets/css/scrollbar.less
@@ -2,7 +2,7 @@
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
-  background: transparent;
+  background: hsla(0, 0%, 70%, 0.1);
 }
 
 ::-webkit-scrollbar-thumb {
