--- a/src/assets/css/default.less
+++ b/src/assets/css/default.less
@@ -2,3 +2,15 @@
 @layoutLeft: 15rem;
 @layoutLeftClose: 5rem;
 @bg: #F6F9F8;
+
+// 默认颜色
+@primaryBg: #fff;
+@primaryColor: rgba(0, 0, 0, 0.85);
+@svgColor: #00000073;
+@svgHoverColor: #404040;
+
+// 黑暗主题
+@darkBg: #18181c;
+@darkColor: #fff;
+@darkSvgColor: #fff;
+@darkSvgHoverColor: #404040;
