--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -17,7 +17,7 @@
     color: @color !important;
   }
 
-  #searches, #container, #pagination {
+  #searches, #container, #pagination, #layout {
     color: @color !important;
     background: @bgColor !important;
   }
