fix: 缩放模式无法点击菜单

--- a/src/assets/css/scrollbar.less
+++ b/src/assets/css/scrollbar.less
@@ -17,3 +17,7 @@
 :hover::-webkit-scrollbar-track {
   background: hsla(0, 0%, 53%, 0.1);
 }
+
+::-webkit-scrollbar-corner {
+  background: rgba(0,0,0,0);
+}
