wip: 升级antd5.0处理

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -17,41 +17,7 @@
     color: @color !important;
   }
 
-  #searches, #container, #pagination, #layout {
-    color: @color !important;
-    background: @bgColor !important;
-  }
-
-  // antd
-  .ant-breadcrumb-separator, .whitespace-nowrap, .ant-pagination-total-text, .ant-tabs-tab-remove {
-    color: @color !important;
-  }
-
-  .ant-tabs-tab {
-    background: @bgColor !important;
-  }
-
-  .ant-tabs-tab-active {
-    background-color: #1d4ed8 !important;
-
-    .ant-tabs-tab-remove {
-      color: #fff !important;
-    }
-
-    .ant-tabs-tab-btn {
-      color: #fff !important;
-    }
-  }
-
-  .ant-tabs, .ant-pagination {
-    color: @color !important;
-  }
-
-  #searches .ant-form-item-label > label {
-    color: @color !important;
-  }
-
-  .ant-table, .ant-table-cell {
+  #container, #layout {
     color: @color !important;
     background: @bgColor !important;
   }
