--- a/src/assets/css/antd.less
+++ b/src/assets/css/antd.less
@@ -43,10 +43,12 @@
 /* 表格列拖拽:结束 */
 
 /* 斑马线:开始 */
-.zebra {
-  .ant-table-row:nth-child(2n),
-  .ant-table-row:nth-child(2n) > .ant-table-cell {
-    background-color: #fcfcfc;
+.theme-primary {
+  .zebra {
+    .ant-table-row:nth-child(2n),
+    .ant-table-row:nth-child(2n) > .ant-table-cell {
+      background-color: #fcfcfc;
+    }
   }
 }
 /* 斑马线:结束 */
@@ -55,6 +57,14 @@
 .bordered {
   .ant-table-tbody > tr > td {
     border-right: 1px solid #f0f0f0;
+  }
+}
+
+.theme-dark {
+  .bordered {
+    .ant-table-tbody > tr > td {
+      border-right: 1px solid #3f3f3f;
+    }
   }
 }
 /* 边框:结束 */
@@ -82,4 +92,43 @@
   margin-right: 7px !important;
   background-color: #f4f4f5 !important;
 }
+
+.theme-dark {
+  .ant-pagination-item {
+    background-color: rgb(29, 29, 29) !important;
+    margin-right: 7px !important;
+  }
+  
+  .ant-pagination-item-active {
+    background-color: #0960bd!important;
+  }
+  
+  .ant-pagination-item-active a {
+    color: #ffffffd9 !important;
+  }
+  
+  .ant-pagination-prev {
+    margin-right: 7px !important;
+    background-color: rgb(29, 29, 29) !important;
+  }
+  
+  .ant-pagination-next {
+    margin-right: 7px !important;
+    background-color: rgb(29, 29, 29) !important;
+  }
+}
 /* 分页:结束 */
+
+/* 标签:开始 */
+.ant-tabs-tab-active {
+  background-color: #1d4ed8 !important;
+
+  .ant-tabs-tab-remove {
+    color: #fff !important;
+  }
+
+  .ant-tabs-tab-btn {
+    color: #fff !important;
+  }
+}
+/* 标签:结束 */
