--- a/src/assets/css/scrollbar.less
+++ b/src/assets/css/scrollbar.less
@@ -2,7 +2,7 @@
 ::-webkit-scrollbar {
   width: 8px;
   height: 8px;
-  background: hsla(0, 0%, 70%, 0.1);
+  background: hsl(0deg 0% 70% / 10%);
 }
 
 ::-webkit-scrollbar-thumb {
@@ -11,13 +11,13 @@
 }
 
 :hover::-webkit-scrollbar-thumb {
-  background: hsla(0, 0%, 53%, 0.4);
+  background: hsl(0deg 0% 53% / 40%);
 }
 
 :hover::-webkit-scrollbar-track {
-  background: hsla(0, 0%, 53%, 0.1);
+  background: hsl(0deg 0% 53% / 10%);
 }
 
 ::-webkit-scrollbar-corner {
-  background: rgba(0,0,0,0);
+  background: rgb(0 0 0 / 0%);
 }
