--- a/src/assets/css/antd.less
+++ b/src/assets/css/antd.less
@@ -1,4 +1,5 @@
-.ant-tabs-card > .ant-tabs-nav .ant-tabs-tab, .ant-tabs-card > div > .ant-tabs-nav .ant-tabs-tab {
+.ant-tabs-card > .ant-tabs-nav .ant-tabs-tab,
+.ant-tabs-card > div > .ant-tabs-nav .ant-tabs-tab {
   padding: 5px 16px 8px !important;
 }
 
@@ -14,15 +15,18 @@
     padding-bottom: 0;
     margin: 0;
   }
+
   .ant-modal-content {
     display: flex;
     flex-direction: column;
     height: calc(100vh);
   }
+
   .ant-modal-body {
     flex: 1;
   }
 }
+
 /* 全屏:结束 */
 
 /* 表格列拖拽:开始 */
@@ -40,6 +44,7 @@
   height: 100%;
   cursor: col-resize;
 }
+
 /* 表格列拖拽:结束 */
 
 /* 斑马线:开始 */
@@ -51,6 +56,7 @@
     }
   }
 }
+
 /* 斑马线:结束 */
 
 /* 边框:开始 */
@@ -60,13 +66,6 @@
   }
 }
 
-.theme-dark {
-  .bordered {
-    .ant-table-tbody > tr > td {
-      border-right: 1px solid #3f3f3f;
-    }
-  }
-}
 /* 边框:结束 */
 
 /* 分页:开始 */
@@ -76,7 +75,7 @@
 }
 
 .ant-pagination-item-active {
-  background-color: #0960bd!important;
+  background-color: #0960bd !important;
 }
 
 .ant-pagination-item-active a {
@@ -94,29 +93,36 @@
 }
 
 .theme-dark {
+  .bordered {
+    .ant-table-tbody > tr > td {
+      border-right: 1px solid #3f3f3f;
+    }
+  }
+
   .ant-pagination-item {
-    background-color: rgb(29, 29, 29) !important;
+    background-color: rgb(29 29 29) !important;
     margin-right: 7px !important;
   }
-  
+
   .ant-pagination-item-active {
-    background-color: #0960bd!important;
+    background-color: #0960bd !important;
   }
-  
+
   .ant-pagination-item-active a {
     color: #ffffffd9 !important;
   }
-  
+
   .ant-pagination-prev {
     margin-right: 7px !important;
-    background-color: rgb(29, 29, 29) !important;
+    background-color: rgb(29 29 29) !important;
   }
-  
+
   .ant-pagination-next {
     margin-right: 7px !important;
-    background-color: rgb(29, 29, 29) !important;
+    background-color: rgb(29 29 29) !important;
   }
 }
+
 /* 分页:结束 */
 
 /* 标签:开始 */
@@ -131,4 +137,5 @@
     color: #fff !important;
   }
 }
+
 /* 标签:结束 */
