--- a/src/assets/css/theme-color.less
+++ b/src/assets/css/theme-color.less
@@ -1,5 +1,5 @@
-@import "./default.less";
-@import url(./theme.less);
+@import url("./default.less");
+@import url("./theme.less");
 
 // 默认
 .theme-primary {
