--- a/src/assets/css/default.less
+++ b/src/assets/css/default.less
@@ -11,6 +11,6 @@
 
 // 黑暗主题
 @darkBg: #18181c;
-@darkColor: #fff;
-@darkSvgColor: #fff;
+@darkColor: rgb(153, 153, 153);
+@darkSvgColor: rgb(153, 153, 153);
 @darkSvgHoverColor: #404040;
