feat: 新增跳转和标签交互

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -9,6 +9,10 @@
   color: @color !important;
   background: @bgColor !important;
 
+  .bg {
+    background-color: @bgColor !important;
+  }
+
   .change svg {
     color: @svgColor !important;
   }
