--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -2,6 +2,13 @@ body {
   margin: 0;
 }
 
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+}
+
 // react-activation样式
 .ka-wrapper,
 .ka-content {
