--- a/src/pages/dataScreen/index.module.less
+++ b/src/pages/dataScreen/index.module.less
@@ -20,4 +20,76 @@
     transition: all 0.3s;
     transform-origin: left top;
   }
+
+  .main {
+    box-sizing: border-box;
+    display: flex;
+    flex: 1;
+    width: 100%;
+    padding: 12px 42px 20px;
+
+    .left {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      width: 394px;
+      height: 100%;
+      margin-right: 40px;
+
+      .top,
+      .center,
+      .bottom {
+        position: relative;
+        box-sizing: border-box;
+        width: 100%;
+        padding-top: 54px;
+      }
+
+      .top {
+        height: 37%;
+        background: url("./images/card-height.png") no-repeat;
+        background-size: 100% 100%;
+      }
+
+      .center {
+        height: 30%;
+        background: url("./images/card-short.png") no-repeat;
+        background-size: 100% 100%;
+      }
+
+      .bottom {
+        height: 27%;
+        margin-bottom: 0;
+        background: url("./images/card-short.png") no-repeat;
+        background-size: 100% 100%;
+      }
+    }
+
+    .title {
+      position: absolute;
+      top: 1px;
+      left: 0;
+      display: flex;
+      flex-direction: column;
+
+      span {
+        margin-bottom: 12px;
+        font-family: YouSheBiaoTiHei;
+        font-size: 18px;
+        line-height: 16px;
+        color: #fff;
+        letter-spacing: 1px;
+      }
+
+      img {
+        width: 68px;
+        height: 7px;
+      }
+    }
+
+    .mainChart {
+      width: 100%;
+      height: 100%;
+    }
+  }
 }
