--- a/src/pages/dataScreen/components/Header/index.module.less
+++ b/src/pages/dataScreen/components/Header/index.module.less
@@ -8,7 +8,7 @@
     position: relative;
     width: 567px;
     height: 100%;
-    background: url("./images/left.png") no-repeat;
+    background: url("../images/left.png") no-repeat;
     background-size: 100% 100%;
   }
 
@@ -29,7 +29,7 @@
       color: #05e8fe;
       text-align: center;
       letter-spacing: 4px;
-      background: url("./images/center.png") no-repeat;
+      background: url("../images/center.png") no-repeat;
       background-size: 100% 100%;
 
       .warning {
@@ -45,7 +45,7 @@
         color: #fff;
         text-align: center;
         letter-spacing: 1px;
-        background: url("./images/warning.png") no-repeat;
+        background: url("../images/warning.png") no-repeat;
         background-size: 100% 100%;
         transform: translateX(-50%);
       }
@@ -69,14 +69,14 @@
     color: #29fcff;
     text-align: center;
     cursor: pointer;
-    background: url("./images/btn-left.png") no-repeat;
+    background: url("../images/btn-left.png") no-repeat;
     background-size: 100% 100%;
   }
 
   .download {
     left: 0;
     padding-right: 0;
-    background: url("./images/btn-right.png") no-repeat;
+    background: url("../images/btn-right.png") no-repeat;
   }
 
   .time {
