fix: 部分图片未引入

--- a/src/pages/dataScreen/components/AnnualUseChart/index.module.less
+++ b/src/pages/dataScreen/components/AnnualUseChart/index.module.less
@@ -3,7 +3,7 @@
   width: 206px;
   height: 103px;
   padding: 5px 20px;
-  background: url("../images/contrast-bg.png") no-repeat;
+  background: url("../../images/contrast-bg.png") no-repeat;
   background-size: 100% 100%;
 
   .month {
