--- a/src/pages/dataScreen/components/HotPlateChart/index.module.less
+++ b/src/pages/dataScreen/components/HotPlateChart/index.module.less
@@ -4,7 +4,7 @@
   height: 36px;
   margin: 10px 10px 0;
   line-height: 36px;
-  background: url("../images/rankingChart-bg.png") no-repeat;
+  background: url("../../images/rankingChart-bg.png") no-repeat;
   background-size: 100% 100%;
 
   span {
