--- a/src/pages/dataScreen/components/MaleFemaleRatioChart/index.module.less
+++ b/src/pages/dataScreen/components/MaleFemaleRatioChart/index.module.less
@@ -17,7 +17,7 @@
       align-items: center;
       width: 110px;
       height: 115px;
-      background: url("../images/man-bg.png") no-repeat;
+      background: url("../../images/man-bg.png") no-repeat;
       background-size: 100% 100%;
 
       img {
@@ -34,7 +34,7 @@
     }
 
     .woman {
-      background: url("../images/woman-bg.png") no-repeat;
+      background: url("../../images/woman-bg.png") no-repeat;
     }
   }
 
