--- a/src/pages/dataScreen/components/OverNext30Chart/index.module.less
+++ b/src/pages/dataScreen/components/OverNext30Chart/index.module.less
@@ -5,7 +5,7 @@
   width: 180px;
   height: 60px;
   padding-left: 20px;
-  background: url("../images/line-bg.png") no-repeat;
+  background: url("../../images/line-bg.png") no-repeat;
   background-size: 100% 100%;
 
   span {
