--- a/src/layouts/index.module.less
+++ b/src/layouts/index.module.less
@@ -10,6 +10,8 @@
   box-sizing: border-box;
   overflow: hidden;
   border-bottom: 1px solid #eee;
+  z-index: 2;
+  background-color: #fff;
 }
 
 .headerCloseMenu {
@@ -34,7 +36,7 @@
 }
 
 .con {
-  position: fixed;
+  position: relative;
   left: @layoutLeft;
   top: @layoutTop;
   right: 0;
