fix: 收缩菜单内容宽度

--- a/src/layouts/index.module.less
+++ b/src/layouts/index.module.less
@@ -36,6 +36,7 @@
 }
 
 .con {
+  width: calc(100% - @layoutLeft);
   position: relative;
   left: @layoutLeft;
   top: @layoutTop;
@@ -45,6 +46,7 @@
 
 .conCloseMenu {
   left: @layoutLeftClose;
+  width: calc(100% - @layoutLeftClose);
 }
 
 .conMaximize {
