style: 内容区域添加背景色

--- a/src/assets/css/default.less
+++ b/src/assets/css/default.less
@@ -5,12 +5,16 @@
 
 // 默认颜色
 @primaryBg: #fff;
+@contentBg: #fff;
+@layoutContentBg: #f6f9f8;
 @primaryColor: rgba(0, 0, 0, 0.85);
 @svgColor: #00000073;
 @svgHoverColor: #404040;
 
 // 黑暗主题
 @darkBg: #18181c;
+@darkContentBg: #18181c;
+@darkLayoutContentBg: #000;
 @darkColor: rgb(153, 153, 153);
 @darkSvgColor: rgb(153, 153, 153);
 @darkSvgHoverColor: #404040;
