--- a/src/assets/css/theme-color.less
+++ b/src/assets/css/theme-color.less
@@ -8,5 +8,11 @@
 
 // 暗黑主题
 .theme-dark {
-  .changeTheme(@darkColor, @darkBg, @darkSvgColor);
+  .changeTheme(
+    @darkColor,
+    @darkBg,
+    @darkLayoutContentBg,
+    @darkContentBg,
+    @darkSvgColor
+  );
 }
