--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -1,4 +1,5 @@
 @import url("./reset.less");
+@import url("./default.less");
 
 body {
   margin: 0;
@@ -20,4 +21,10 @@ body,
 .echarts {
   width: 100%;
   height: 100%;
+}
+
+// 内容页
+#layoutContent {
+  min-height: calc(100vh - @layoutTop);
+  box-sizing: border-box;
 }
