fix: 富文本主题色

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -44,6 +44,15 @@
     background-color: @contentBgColor !important;
   }
 
+  // 富文本
+  .w-e-toolbar,
+  .w-e-bar-item button,
+  .w-e-text-container {
+    fill: @color !important;
+    color: @color !important;
+    background-color: @bgColor !important;
+  }
+
   #header,
   #layout {
     color: @color !important;
