--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -9,7 +9,8 @@ html,
 body,
 #root {
   width: 100%;
-  height: 100%;
+  height: 100%; 
+  font-size: 16px;
 }
 
 // react-activation样式
@@ -21,4 +22,31 @@ body,
 .echarts {
   width: 100%;
   height: 100%;
+}
+
+.b-t, .border-t,
+.b-b, .border-b,
+.b-l, .border-l,
+.b-r, .border-r {
+  border-style: none;
+}
+
+.b-t, .border-t, .b-solid-t, .border-solid-t {
+  border-top-style: solid;
+}
+
+.b-b, .border-b, .b-solid-b, .border-solid-b {
+  border-bottom-style: solid;
+}
+
+.b-l, .border-l, .b-solid-l, .border-solid-l {
+  border-left-style: solid;
+}
+
+.b-r, .border-r, .b-solid-r, .border-solid-r {
+  border-right-style: solid;
+}
+
+.border-dashed, .b-dashed {
+  border-style: dashed;
 }
