--- a/src/assets/css/reset.less
+++ b/src/assets/css/reset.less
@@ -83,7 +83,7 @@ video {
   padding: 0;
   margin: 0;
   font: inherit;
-  font-size: 100%;
+  font-size: 16px;
   vertical-align: baseline;
   border: 0;
 }
