style: 表单按钮间距调整

--- a/src/assets/css/antd.less
+++ b/src/assets/css/antd.less
@@ -1,10 +1,5 @@
 @import url("./default.less");
 
-.ant-tabs-card > .ant-tabs-nav .ant-tabs-tab,
-.ant-tabs-card > div > .ant-tabs-nav .ant-tabs-tab {
-  padding: 5px 16px 8px !important;
-}
-
 /* 全屏:开始 */
 .full-modal {
   .ant-modal {
@@ -28,7 +23,6 @@
     flex: 1;
   }
 }
-
 /* 全屏:结束 */
 
 /* 表格列拖拽:开始 */
@@ -67,7 +61,6 @@
     border-right: 1px solid #f0f0f0;
   }
 }
-
 /* 边框:结束 */
 
 /* 分页:开始 */
@@ -128,7 +121,6 @@
     background-color: rgb(29 29 29) !important;
   }
 }
-
 /* 分页:结束 */
 
 /* 标签:开始 */
@@ -144,4 +136,16 @@
   }
 }
 
+
+
+.ant-tabs-card > .ant-tabs-nav .ant-tabs-tab,
+.ant-tabs-card > div > .ant-tabs-nav .ant-tabs-tab {
+  padding: 5px 16px 8px !important;
+}
 /* 标签:结束 */
+
+/* 表单:开始 */
+.ant-form-inline .ant-form-item {
+  margin-right: 10px !important;
+}
+/* 表单:结束 */
