perf: 鼠标经过菜单图片放大

--- a/src/assets/css/antd.less
+++ b/src/assets/css/antd.less
@@ -149,3 +149,12 @@
   margin-right: 10px !important;
 }
 /* 表单:结束 */
+
+/* 菜单:开始 */
+#layoutMenu .ant-menu-item:hover,
+#layoutMenu .ant-menu-submenu:hover {
+  .ant-menu-item-icon {
+    font-size: 16px;
+  }
+}
+/* 菜单:结束 */
