--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -44,6 +44,10 @@
     background-color: @contentBgColor !important;
   }
 
+  #card {
+    background-color: @contentBgColor !important;
+  }
+
   // 富文本
   .w-e-toolbar,
   .w-e-bar-item button,
