--- a/src/assets/css/antd.less
+++ b/src/assets/css/antd.less
@@ -25,7 +25,7 @@
 }
 /* 全屏:结束 */
 
-/* 表格列拖拽:开始 */
+/* 表格:开始 */
 .react-resizable {
   position: relative;
   background-clip: padding-box;
@@ -40,8 +40,7 @@
   height: 100%;
   cursor: col-resize;
 }
-
-/* 表格列拖拽:结束 */
+/* 表格:结束 */
 
 /* 斑马线:开始 */
 .theme-primary {
@@ -52,7 +51,6 @@
     }
   }
 }
-
 /* 斑马线:结束 */
 
 /* 边框:开始 */
@@ -136,8 +134,6 @@
   }
 }
 
-
-
 .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab,
 .ant-tabs-card > div > .ant-tabs-nav .ant-tabs-tab {
   padding: 5px 16px 8px !important;
@@ -158,3 +154,10 @@
   }
 }
 /* 菜单:结束 */
+
+/* 搜索:开始 */
+#searches .ant-input-number {
+  width: 100%;
+}
+/* 搜索:结束 */
+
