--- a/src/assets/css/default.less
+++ b/src/assets/css/default.less
@@ -1,20 +1,31 @@
 @layoutTop: 4.8rem;
+
 @layoutLeft: 15rem;
+
 @layoutLeftClose: 5rem;
-@bg: #F6F9F8;
+
+@bg: #f6f9f8;
 
 // 默认颜色
 @primaryBg: #fff;
 @contentBg: #fff;
+
 @layoutContentBg: #f6f9f8;
+
 @primaryColor: rgba(0, 0, 0, 0.85);
+
 @svgColor: #00000073;
+
 @svgHoverColor: #404040;
 
 // 黑暗主题
 @darkBg: #18181c;
 @darkContentBg: #18181c;
+
 @darkLayoutContentBg: #000;
+
 @darkColor: rgb(153, 153, 153);
+
 @darkSvgColor: rgb(153, 153, 153);
+
 @darkSvgHoverColor: #404040;
