--- a/packages/modal/src/index.less
+++ b/packages/modal/src/index.less
@@ -1,11 +1,8 @@
 .full-modal {
   .ant-modal {
     position: absolute;
+    inset: 0 !important;
     max-width: 100%;
-    top: 0 !important;
-    bottom: 0 !important;
-    left: 0 !important;
-    right: 0 !important;
     padding-bottom: 0;
     margin: 0;
   }
