--- a/src/layouts/index.module.less
+++ b/src/layouts/index.module.less
@@ -1,17 +1,17 @@
-@import url('@/assets/css/default.less');
+@import url("@/assets/css/default.less");
 
 .header {
   position: fixed;
-  flex-direction: column;
   top: 0;
-  left: @layoutLeft;
   right: 0;
-  height: @layoutTop;
-  box-sizing: border-box;
-  overflow: hidden;
-  border-bottom: 1px solid #eee;
+  left: @layoutLeft;
   z-index: 3;
+  box-sizing: border-box;
+  flex-direction: column;
+  height: @layoutTop;
+  overflow: hidden;
   background-color: #fff;
+  border-bottom: 1px solid #eee;
 }
 
 .headerCloseMenu {
@@ -25,10 +25,10 @@
 .menu {
   position: fixed;
   top: 0;
-  left: 0;
   bottom: 0;
-  background-color: #000;
+  left: 0;
   width: @layoutLeft !important;
+  background-color: #000;
 }
 
 .menuClose {
@@ -36,14 +36,11 @@
 }
 
 .con {
+  position: relative;
+  inset: @layoutTop 0 0 @layoutLeft;
+  box-sizing: border-box;
   width: calc(100% - @layoutLeft);
   min-height: calc(100vh - @layoutTop);
-  box-sizing: border-box;
-  position: relative;
-  left: @layoutLeft;
-  top: @layoutTop;
-  right: 0;
-  bottom: 0;
 }
 
 .conCloseMenu {
@@ -52,9 +49,9 @@
 }
 
 .conMaximize {
-  width: 100%;
-  left: 0 !important;
   top: calc(@layoutTop / 2);
+  left: 0 !important;
+  width: 100%;
 }
 
 .headerNone {
