--- a/packages/modal/src/index.less
+++ b/packages/modal/src/index.less
@@ -3,6 +3,7 @@
     position: absolute;
     inset: 0 !important;
     max-width: 100%;
+    inset: 0 !important;
     padding-bottom: 0;
     margin: 0;
   }
