style: 弹窗样式调整

--- a/src/assets/css/antd.less
+++ b/src/assets/css/antd.less
@@ -21,33 +21,10 @@
 
 /* 边框:结束 */
 
-/* 分页:开始 */
-.ant-pagination-item {
-  margin-right: 7px !important;
-  background-color: #f4f4f5 !important;
-}
-
-.ant-pagination-item-active {
-  background-color: #0960bd !important;
-}
-
-.ant-pagination-item-active a {
-  color: #fff !important;
-}
-
-.ant-pagination-prev {
-  margin-right: 7px !important;
-  background-color: #f4f4f5 !important;
-}
-
-.ant-pagination-next {
-  margin-right: 7px !important;
-  background-color: #f4f4f5 !important;
-}
-
+/* 主题:开始 */
 .theme-dark {
   .border-bottom {
-    border-bottom: 1px solid @darkColor !important;
+    border-bottom: 1px solid #383838 !important;
   }
 
   .bordered {
@@ -55,32 +32,9 @@
       border-right: 1px solid #3f3f3f;
     }
   }
-
-  .ant-pagination-item {
-    margin-right: 7px !important;
-    background-color: rgb(29 29 29) !important;
-  }
-
-  .ant-pagination-item-active {
-    background-color: #0960bd !important;
-  }
-
-  .ant-pagination-item-active a {
-    color: #ffffffd9 !important;
-  }
-
-  .ant-pagination-prev {
-    margin-right: 7px !important;
-    background-color: rgb(29 29 29) !important;
-  }
-
-  .ant-pagination-next {
-    margin-right: 7px !important;
-    background-color: rgb(29 29 29) !important;
-  }
 }
 
-/* 分页:结束 */
+/* 主题:结束 */
 
 /* 标签:开始 */
 .ant-tabs-tab-active {
