style: 样式规范调整

--- a/src/assets/css/antd.less
+++ b/src/assets/css/antd.less
@@ -22,7 +22,7 @@
 /* 边框:结束 */
 
 /* 主题:开始 */
-.leftDivide {
+.left-divide-tab {
   border-left: 1px solid #d9d9d9;
 }
 
@@ -37,7 +37,7 @@
     }
   }
 
-  .leftDivide {
+  .left-divide-tab {
     border-left: 1px solid #383838 !important;
   }
 }
@@ -72,8 +72,8 @@
 /* 表单:结束 */
 
 /* 菜单:开始 */
-#layoutMenu .ant-menu-item:hover,
-#layoutMenu .ant-menu-submenu:hover {
+#layout-menu .ant-menu-item:hover,
+#layout-menu .ant-menu-submenu:hover {
   .ant-menu-item-icon {
     font-size: 16px;
   }
