--- a/src/assets/css/default.less
+++ b/src/assets/css/default.less
@@ -1,31 +1,27 @@
-@layoutTop: 4.8rem;
+@layout-top: 4.8rem;
 
-@layoutLeft: 15rem;
+@layout-left: 15rem;
 
-@layoutLeftClose: 5rem;
+@layout-left-close: 5rem;
 
 @bg: #f6f9f8;
 
 // 默认颜色
-@primaryBg: #fff;
-@contentBg: #fff;
+@primary-bg: #fff;
+@content-bg: #fff;
 
-@layoutContentBg: #f6f9f8;
+@layout-content-bg: #f6f9f8;
 
-@primaryColor: rgba(0, 0, 0, 0.85);
+@primary-color: rgba(0, 0, 0, 0.85);
 
-@svgColor: #00000073;
-
-@svgHoverColor: #404040;
+@svg-color: #00000073;
 
 // 黑暗主题
-@darkBg: #18181c;
-@darkContentBg: #18181c;
+@dark-bg: #18181c;
+@dark-content-bg: #18181c;
 
-@darkLayoutContentBg: #000;
+@dark-layout-content-bg: #000;
 
-@darkColor: rgb(153, 153, 153);
+@dark-color: rgb(153, 153, 153);
 
-@darkSvgColor: rgb(153, 153, 153);
-
-@darkSvgHoverColor: #404040;
+@dark-svg-color: rgb(153, 153, 153);
