--- a/src/layouts/index.module.less
+++ b/src/layouts/index.module.less
@@ -4,21 +4,21 @@
   position: fixed;
   top: 0;
   right: 0;
-  left: @layoutLeft;
+  left: @layout-left;
   z-index: 3;
   box-sizing: border-box;
   flex-direction: column;
-  height: @layoutTop;
+  height: @layout-top;
   overflow: hidden;
   background-color: #fff;
   border-bottom: 1px solid #eee;
 }
 
-.headerCloseMenu {
-  left: @layoutLeftClose !important;
+.header-close-menu {
+  left: @layout-left-close !important;
 }
 
-.headerDriver {
+.header-driver {
   border-bottom: 1px solid #eee;
 }
 
@@ -27,52 +27,43 @@
   top: 0;
   bottom: 0;
   left: 0;
-  width: @layoutLeft !important;
+  width: @layout-left !important;
   background-color: #000;
 }
 
-.menuClose {
-  width: @layoutLeftClose !important;
+.menu-close {
+  width: @layout-left-close !important;
 }
 
 .con {
   position: relative;
-  inset: @layoutTop 0 0 @layoutLeft;
+  inset: @layout-top 0 0 @layout-left;
   box-sizing: border-box;
-  width: calc(100% - @layoutLeft);
-  min-height: calc(100vh - @layoutTop);
+  width: calc(100% - @layout-left);
+  min-height: calc(100vh - @layout-top);
 }
 
-.conCloseMenu {
-  left: @layoutLeftClose;
-  width: calc(100% - @layoutLeftClose);
+.con-close-menu {
+  left: @layout-left-close;
+  width: calc(100% - @layout-left-close);
 }
 
-.conMaximize {
-  top: calc(@layoutTop / 2);
+.con-maximize {
+  top: calc(@layout-top / 2);
   left: 0 !important;
   width: 100%;
 }
 
-.headerNone {
+.header-none {
   left: 0 !important;
-  height: calc(@layoutTop / 2);
+  height: calc(@layout-top / 2);
 }
 
 .none {
   display: none !important;
 }
 
-.menuNone {
+.menu-none {
   width: 0 !important;
   opacity: 0 !important;
 }
-
-.conPhone {
-  left: 0 !important;
-}
-
-.headerPhone {
-  left: 0 !important;
-}
-
