--- a/src/components/Modal/index.less
+++ b/src/components/Modal/index.less
@@ -1,20 +1,22 @@
-.ant-modal-content {
-  padding: 0 !important;
+.basic-modal {
+  .ant-modal-content {
+    padding: 0 !important;
 
-  .modal-custom-title {
-    box-sizing: border-box;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-    padding: 16px 24px;
-    cursor: move;
-    border-bottom: 1px solid rgb(0 0 0 / 6%);
-  }
+    .modal-custom-title {
+      box-sizing: border-box;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      width: 100%;
+      padding: 16px 24px;
+      cursor: move;
+      border-bottom: 1px solid rgb(0 0 0 / 6%);
+    }
 
-  .ant-modal-footer {
-    padding: 10px 16px;
-    border-top: 1px solid rgb(0 0 0 / 6%);
+    .ant-modal-footer {
+      padding: 10px 16px;
+      border-top: 1px solid rgb(0 0 0 / 6%);
+    }
   }
 }
 
