perf: 面包屑不换行

--- a/src/assets/css/antd.less
+++ b/src/assets/css/antd.less
@@ -1,5 +1,3 @@
-@import url("./default.less");
-
 /* 斑马线:开始 */
 .theme-primary {
   .zebra {
@@ -87,3 +85,16 @@
 }
 
 /* 搜索:结束 */
+
+/* 面包屑:开始 */
+.breadcrumb-separator {
+  color: rgba(0, 0, 0, 0.45);
+}
+
+.theme-dark {
+  .breadcrumb-separator {
+    color: rgba(255, 255, 255, 0.45) !important;
+  }
+}
+
+/* 面包屑:结束 */
