refactor: 表格默认关闭自动计算高度

--- a/src/components/Table/index.less
+++ b/src/components/Table/index.less
@@ -13,7 +13,7 @@
   cursor: col-resize;
 }
 
-.ant-table-body {
+.ant-table-body, .ant-table-container {
   overflow: auto !important;
   scrollbar-color: auto;
   scrollbar-width: auto;
