fix: 表格无法省略url类型数据

--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -65,3 +65,12 @@ body,
 .b-dashed {
   border-style: dashed;
 }
+
+.ellipsis {
+  display: inline-block;
+  max-width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap !important;
+  word-wrap: normal !important;
+}
