style: 弹窗组件内容间距

--- a/src/components/Modal/index.less
+++ b/src/components/Modal/index.less
@@ -1,4 +1,8 @@
 .base-modal {
+  .ant-modal-header {
+    margin-bottom: 0;
+  }
+
   .ant-modal-content {
     padding: 0 !important;
 
@@ -14,9 +18,14 @@
     }
 
     .ant-modal-footer {
+      margin-top: 0;
       padding: 10px 16px;
       border-top: 1px solid rgb(0 0 0 / 6%);
     }
+  }
+
+  .base-modal-content {
+    padding: 24px;
   }
 }
 
