feat: react-activation样式

--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -74,3 +74,9 @@ body,
   white-space: nowrap !important;
   word-wrap: normal !important;
 }
+
+// react-activation样式
+.ka-wrapper,
+.ka-content {
+  height: 100%;
+}
