refactor: 列筛选按钮调整

--- a/src/assets/css/public.less
+++ b/src/assets/css/public.less
@@ -80,3 +80,13 @@ body,
 .ka-content {
   height: 100%;
 }
+
+.small-btn {
+  padding: 0 10px !important;
+  height: 29px !important;
+  line-height: 29px !important;
+
+  span {
+    font-size: 13px;
+  }
+}
