perf: 富文本黑夜模式

--- a/src/assets/css/theme.less
+++ b/src/assets/css/theme.less
@@ -45,7 +45,8 @@
   // 富文本
   .w-e-toolbar,
   .w-e-bar-item button,
-  .w-e-text-container {
+  .w-e-text-container,
+  .w-e-bar-item-menus-container {
     color: @color !important;
     background-color: @bg-color !important;
     fill: @color !important;
